--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,9 @@
 </style>
 </head>
 <body>
+	<a href="https://github.com/sumanth13131/SugarcaneSample" target="_blank" style="padding-left: 95%;"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Repo" width="30"
+		height="30"></a>
+
 	<div class="container  fileuploader " style="margin-top: 10%">
 		<div class="row justify-content-center">
 			<h1 style="color:orange;">Sugarcane Production Predictor</h1>
@@ -92,6 +95,5 @@
 	</div>
 
 	
-
 </body>
 </html>
