--- a/templates/index.html
+++ b/templates/index.html
@@ -65,12 +65,12 @@
 			<div class="col-md-6">
 				<table style="width: 100%;">
 				{% if flag != False %}
-					<h4 style="color: aliceblue;font-weight: bold;">&nbsp; Predicted Production <span style="color: greenyellow;">{{production}}</span> Tonness</h4>
+					<h4 style="color: aliceblue;font-weight: bold;">&nbsp; Predicted Production <span style="color: greenyellow;">{{production}}</span> Tonnes</h4>
 					<tr style="color: aliceblue;font-weight: bold;">
 						<th style="text-align: center;color: aliceblue;">Year</th>
 						<th style="text-align: center;color: aliceblue;">Area (Hectares)</th> 
 						<th style="text-align: center;color: aliceblue;">Rainfall (mm)</th>
-						<th style="text-align: center;color: aliceblue;">Production (Tonness)</th>
+						<th style="text-align: center;color: aliceblue;">Production (Tonnes)</th>
 				 	</tr>
 					<tr style="color: aliceblue;">
 						<td style="text-align: center;color: aliceblue;">{{year}}</td>
